--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/contracts": "^10.0",
+        "illuminate/contracts": "9.19",
         "doctrine/dbal": "3.5.4",
         "aws/aws-sdk-php": "^3.28",
         "ramsey/uuid": "^4.3",
