--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "require": {
         "php": "^8.1",
         "illuminate/contracts": "9.19",
-        "doctrine/dbal": "2.5",
+        "doctrine/dbal": "*",
         "aws/aws-sdk-php": "^3.28",
         "ramsey/uuid": "^4.3",
         "guzzlehttp/guzzle": "^7.0.1",
